# alert-system

./: .gitignore  Cargo.toml  compose.yaml.example
backend/: Cargo.toml  Dockerfile  README.md
backend/src/: main.rs
client/: .env.example  .gitignore  Cargo.toml
client/src/: main.rs
frontend/: .env.example  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/pages/: index.vue
frontend/plugins/: socket.io.ts
server/: .gitignore  Cargo.toml  justfile
