[package]
# name = "rust_template"
name = "server"
description = "AstragoDE's Rust Template"
# authors = ["AstragoDE <51675359+AstragoDE@users.noreply.github.com>"]
authors = ["AstragoDE <51675359+AstragoDE@users.noreply.github.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# ===== DEPENDENCIES =====

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.5", features = ["tokio", "tracing", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
socketioxide = { version = "0.14.1", features = ["tracing"] }
tokio = { version = "1.40.0", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
