[package]
# name = "rust_template"
name = "client"
description = "AstragoDE's Rust Template"
# authors = ["AstragoDE <51675359+AstragoDE@users.noreply.github.com>"]
authors = ["AstragoDE <51675359+AstragoDE@users.noreply.github.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# ===== DEPENDENCIES =====

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
