[package]
# name = "rust_template"
name = "client"
description = "AstragoDE's Rust Template"
# authors = ["AstragoDE <51675359+AstragoDE@users.noreply.github.com>"]
authors = ["AstragoDE <51675359+AstragoDE@users.noreply.github.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# ===== DEPENDENCIES =====

[dependencies]
anyhow = "1.0.89"
dotenvy = "0.15.7"
notify-rust = "4.11.3"
rodio = "0.19.0"
rust_socketio = { version = "0.6.0", features = ["async"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
